--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     <section class="wow fadeIn" data-wow-delay="0.1s">
                         <div class="bg-secondary text-light text-center p-5">
                            
-							<p class="m-0">&copy; All Rights Reserved. Designed by Supriyatno</a></p>
+							<p class="m-0">&copy; Supriyatno. Designed by <a href="https://dopedevelopers.com/">Dope developers</a></p>
                         </div>
                     </section>
                     <!-- Footer End -->
